samples/_failures_safe/1761419436_280335_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_618ed023.c: In function ‘main’:
./samples/SAFE/__tmp_618ed023.c:158:5: error: expected declaration or statement at end of input
  158 |     }
      |     ^
